{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 5,
  "lineage": "4a7ac4c2-9e6c-568a-6a0b-4f03cd789af9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-externalssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-10T01:05:41.644-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/firewall-externalssh",
            "log_config": [],
            "name": "firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-10T01:05:41.690-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/webserver",
            "log_config": [],
            "name": "webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220822",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/disks/jenkins-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-anthos-359617/zones/us-central1-a/instances/jenkins-vm",
            "instance_id": "5094331442489588620",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "ssh-keys": "niteshsharma12012:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDehYCVWGc64ShKalMyXfmLo/iwvvnXAuZDDr0Swj27st6CoJNQ7KMCy0xld2hpl4aZKKLEmqpI4QE/2Z3ZyF8usDOexXfr5iXI3MfHu2UOhgGKBYV58k6Qnxo7D+1taKsuFxmpUop8sI8Yc12LqH6B0Pk35QM1hB3w67jlYQndKwDxrNhjf+r/TWUYcQm0cGpfqbPYXv4N1dwCEltwGDf/weq8Sa19qDG3Gqat+JU7rRcPVJqxbi8xZC9sOKOxyGiYjaqif6qUA9c8pIgjIojYF+rz+eo9Q/lYJZQsCwiE7NcIMIRZ79yK9DC5VW9RDnmrv5qdPQLCfV/W6OH8L345yblakmMHAtNqJwEAen4YCJnpQ8E94jOXnsK4mMqjveHsqNIpCdyo2uo/Xdcu3o1uoKykFg0zeLO [...]
            },
            "metadata_fingerprint": "UhyWCe8UX2c=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo yum update -y\n\nsudo yum install java-1.8.0-openjdk-devel -y\n\ncurl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.repo\n\nsudo rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key\n\nsudo yum install jenkins -y\n\nsudo systemctl start jenkins\n",
            "name": "jenkins-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.210.93",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
                "network_ip": "10.128.0.42",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/regions/us-central1/subnetworks/default",
                "subnetwork_project": "gcp-anthos-359617"
              }
            ],
            "project": "gcp-anthos-359617",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/instances/jenkins-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_firewall.firewall-externalssh",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}